[package]
name = "frost-secp256k1"
version = "0.2.3"
authors = ["isis lovecruft <isis@patternsinthevoid.net>", "Rupansh Sekar <rupanshsekar@hotmail.com>"]
edition = "2018"
description = "FROST: Flexible Round-Optimised Threshold Signature using the Ristretto group"
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/xp-network/frost-dalek"
homepage = "https://dalek.rs"
documentation = "https://docs.rs/frost-dalek"
keywords = ["cryptography", "frost", "ristretto", "signature", "threshold-signature"]
categories = ["cryptography"]
exclude = [ ".gitignore" ]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "/opt/rustwide/workdir/docs/assets/rustdoc-include-katex-header.html"]

[dependencies]
rand = { version = "0.8", optional = true }
sha3 = { version = "0.10", default-features = false }
subtle = { version = "2.4", default-features = false }
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }
k256 = { version = "0.10.2", default-features = false, features = ["keccak256", "arithmetic","serde"] }
sec1 = { version = "0.2", default-features = false }
bincode = "1.3.3"
serde_json = {version = "1.0.103"}
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.3" }
secp256k1 = "0.21"
hex = "0.4"

[[bench]]
name = "dalek_benchmarks"
harness = false

[features]
default = ["std"]

std = ["k256/std", "rand"]
alloc = ["zeroize/alloc", "sec1/alloc"]
